--- a/MatchingMakingMonitor/MainWindow.xaml
+++ b/MatchingMakingMonitor/MainWindow.xaml
@@ -93,7 +93,7 @@
 												<TextBlock Margin="5" FontSize="{Binding Settings.FontSize}" 
 																	 FontWeight="Bold" Foreground="{Binding ColorName}" Text="{Binding TextName}"/>
 												<TextBlock Margin="5" FontSize="{Binding Settings.FontSize}" 
-																	 Foreground="Black" Text="{Binding ShipName}" />
+																	 Foreground="Black" Text="{Binding TextShipName}" />
 											</StackPanel>
 											<StackPanel Grid.Column="1" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="{Binding ColorBattles}" Text="{Binding TextBattles}"
