--- a/MatchingMakingMonitor/MainWindow.xaml
+++ b/MatchingMakingMonitor/MainWindow.xaml
@@ -90,28 +90,28 @@
 												<ColumnDefinition Width="25*"></ColumnDefinition>
 											</Grid.ColumnDefinitions>
 											<StackPanel Grid.Column="0" Orientation="Vertical">
-												<TextBlock Margin="5" FontSize="{Binding Settings.FontSize}" 
+												<TextBlock Margin="5" FontSize="{Binding SettingsWrapper.FontSize}" 
 																	 FontWeight="Bold" Foreground="{Binding ColorName}" Text="{Binding TextName}"/>
-												<TextBlock Margin="5" FontSize="{Binding Settings.FontSize}" 
+												<TextBlock Margin="5" FontSize="{Binding SettingsWrapper.FontSize}" 
 																	 Foreground="Black" Text="{Binding TextShipName}" />
 											</StackPanel>
 											<StackPanel Grid.Column="1" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="{Binding ColorBattles}" Text="{Binding TextBattles}"
-																	 FontSize="{Binding Settings.FontSize}" />
+																	 FontSize="{Binding SettingsWrapper.FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorAvgXp}" Text="{Binding TextAvgXp}"
-																	 FontSize="{Binding Settings.FontSize}" />
+																	 FontSize="{Binding SettingsWrapper.FontSize}" />
 											</StackPanel>
 											<StackPanel Grid.Column="2" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="Black" Text="{Binding TextWins}" 
-																	 FontSize="{Binding Settings.FontSize}" />
+																	 FontSize="{Binding SettingsWrapper.FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}"
-																	 FontSize="{Binding Settings.FontSize}" />
+																	 FontSize="{Binding SettingsWrapper.FontSize}" />
 											</StackPanel>
 											<StackPanel Grid.Column="3" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="{Binding ColorAvgDamage}" Text="{Binding TextAvgDamage}" 
-																	 FontSize="{Binding Settings.FontSize}" />
+																	 FontSize="{Binding SettingsWrapper.FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorAvgFrags}" Text="{Binding TextAvgFrags}" 
-																	 FontSize="{Binding Settings.FontSize}" />
+																	 FontSize="{Binding SettingsWrapper.FontSize}" />
 											</StackPanel>
 											<DockPanel Grid.Column="1" Visibility="{Binding TextVisibility}">
 												<TextBlock Margin="5" VerticalAlignment="Center" Foreground="{Binding ColorAvgDamage}" Text="No stats or hidden" />
