--- a/MatchingMakingMonitor/MainWindow.xaml
+++ b/MatchingMakingMonitor/MainWindow.xaml
@@ -52,7 +52,7 @@
 					<TextBlock Text="Region:" Margin="0,0,10,0" VerticalAlignment="Center" Height="19" />
 					<ComboBox VerticalAlignment="Center" Width="90" 
 										ItemsSource="{Binding Regions}"
-										SelectedValue="{Binding SettingsWrapper.CurrentSettings.Region}"
+										SelectedValue="{Binding Region}"
 										IsEnabled="{Binding EnableUi}">
 					</ComboBox>
 				</StackPanel>
@@ -90,28 +90,28 @@
 												<ColumnDefinition Width="25*"></ColumnDefinition>
 											</Grid.ColumnDefinitions>
 											<StackPanel Grid.Column="0" Orientation="Vertical">
-												<TextBlock Margin="5" FontSize="{Binding SettingsWrapper.FontSize}" 
+												<TextBlock Margin="5" FontSize="{Binding FontSize}" 
 																	 FontWeight="Bold" Foreground="{Binding ColorName}" Text="{Binding TextName}"/>
-												<TextBlock Margin="5" FontSize="{Binding SettingsWrapper.FontSize}" 
+												<TextBlock Margin="5" FontSize="{Binding FontSize}" 
 																	 Foreground="Black" Text="{Binding TextShipName}" />
 											</StackPanel>
 											<StackPanel Grid.Column="1" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="{Binding ColorBattles}" Text="{Binding TextBattles}"
-																	 FontSize="{Binding SettingsWrapper.FontSize}" />
+																	 FontSize="{Binding FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorAvgXp}" Text="{Binding TextAvgXp}"
-																	 FontSize="{Binding SettingsWrapper.FontSize}" />
+																	 FontSize="{Binding FontSize}" />
 											</StackPanel>
 											<StackPanel Grid.Column="2" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="Black" Text="{Binding TextWins}" 
-																	 FontSize="{Binding SettingsWrapper.FontSize}" />
+																	 FontSize="{Binding FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}"
-																	 FontSize="{Binding SettingsWrapper.FontSize}" />
+																	 FontSize="{Binding FontSize}" />
 											</StackPanel>
 											<StackPanel Grid.Column="3" Orientation="Vertical" Visibility="{Binding Visibility}">
 												<TextBlock Margin="5" Foreground="{Binding ColorAvgDamage}" Text="{Binding TextAvgDamage}" 
-																	 FontSize="{Binding SettingsWrapper.FontSize}" />
+																	 FontSize="{Binding FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorAvgFrags}" Text="{Binding TextAvgFrags}" 
-																	 FontSize="{Binding SettingsWrapper.FontSize}" />
+																	 FontSize="{Binding FontSize}" />
 											</StackPanel>
 											<DockPanel Grid.Column="1" Visibility="{Binding TextVisibility}">
 												<TextBlock Margin="5" VerticalAlignment="Center" Foreground="{Binding ColorAvgDamage}" Text="No stats or hidden" />
