--- a/MatchingMakingMonitor/SettingsWindow.xaml
+++ b/MatchingMakingMonitor/SettingsWindow.xaml
@@ -92,15 +92,15 @@
 				<ColumnDefinition Width="1*"></ColumnDefinition>
 			</Grid.ColumnDefinitions>
 			<TextBlock Grid.Column="0" FontSize="10" FontWeight="Bold" Text="Colors" VerticalAlignment="Center"></TextBlock>
-			<xctk:ColorPicker Grid.Column="1" Margin="5" SelectedColor="{Binding ColorsViewModel.Color9}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="2" Margin="5" SelectedColor="{Binding ColorsViewModel.Color8}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="3" Margin="5" SelectedColor="{Binding ColorsViewModel.Color7}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="4" Margin="5" SelectedColor="{Binding ColorsViewModel.Color6}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="1" Margin="5" SelectedColor="{Binding ColorsViewModel.Color1}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="2" Margin="5" SelectedColor="{Binding ColorsViewModel.Color2}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="3" Margin="5" SelectedColor="{Binding ColorsViewModel.Color3}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="4" Margin="5" SelectedColor="{Binding ColorsViewModel.Color4}"></xctk:ColorPicker>
 			<xctk:ColorPicker Grid.Column="5" Margin="5" SelectedColor="{Binding ColorsViewModel.Color5}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="6" Margin="5" SelectedColor="{Binding ColorsViewModel.Color4}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="7" Margin="5" SelectedColor="{Binding ColorsViewModel.Color3}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="8" Margin="5" SelectedColor="{Binding ColorsViewModel.Color2}"></xctk:ColorPicker>
-			<xctk:ColorPicker Grid.Column="9" Margin="5" SelectedColor="{Binding ColorsViewModel.Color1}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="6" Margin="5" SelectedColor="{Binding ColorsViewModel.Color6}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="7" Margin="5" SelectedColor="{Binding ColorsViewModel.Color7}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="8" Margin="5" SelectedColor="{Binding ColorsViewModel.Color8}"></xctk:ColorPicker>
+			<xctk:ColorPicker Grid.Column="9" Margin="5" SelectedColor="{Binding ColorsViewModel.Color9}"></xctk:ColorPicker>
 		</Grid>
 		<!--<StackPanel>
 			
@@ -153,7 +153,13 @@
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
 			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="0,0,5,0" Padding="5,2" Content="Import settings" Command="{Binding ImportCommand}"></Button>
 			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="5,0,5,0" Padding="5,2"  Content="Export settings" Command="{Binding ExportCommand}"></Button>
-			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="5,0,0,0" Padding="5,2" Content="Reset settings" Command="{Binding ResetCommand}"></Button>
+			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="5,0,0,0" Padding="5,2" Content="Reset/Sync settings" Command="{Binding ResetCommand}">
+				<Button.ToolTip>
+					<ToolTip>
+						<TextBlock>Settings will be reset to defaults and synced with the current ship stats on warships.today</TextBlock>
+					</ToolTip>
+				</Button.ToolTip>
+			</Button>
 		</StackPanel>
 
 	</StackPanel>
