Added material design to web frontend

--- a/Server/Frontend/src/app/app.component.html
+++ b/Server/Frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  Matchmaking Monitor
+  <button md-button>Download latest</button>
+</md-toolbar>
