--- a/Server/Frontend/src/app/app.component.html
+++ b/Server/Frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <md-toolbar color="primary">
   Matchmaking Monitor
-  <button md-button>Download latest</button>
+  <a md-button routerLink="download/latest">Download latest ({{api.latestVersion}})</a>
 </md-toolbar>
+
+<router-outlet></router-outlet>
