--- a/Server/Frontend/src/app/download/download.component.html
+++ b/Server/Frontend/src/app/download/download.component.html
@@ -1,18 +1,43 @@
-<div *ngIf="downloading">
-  <ng-container *ngIf="remaining > 0">
-    Download starting in {{remaining}} seconds.
-  </ng-container>
-  <ng-container *ngIf="remaining <= 0">
-    Download started.
-  </ng-container>
-  Click <a href="{{link}}">here</a> if the download does not start automatically.
-</div>
+<md-card class="download-card">
+	<h1>Download</h1>
+	<md-card-content>
+		<md-select placeholder="Select version" [(ngModel)]="selectedVersion" (change)="selectVersion($event.value)">
+			<md-option *ngFor="let version of allVersions" [value]="version">
+				{{version}}
+			</md-option>
+		</md-select>
+		<button md-raised-button color="accent" (click)="startDownloading()">Download</button>
+	</md-card-content>
+	<md-card-content *ngIf="downloading">
+		<p>
+			<ng-container *ngIf="remaining > 0">
+				Download starting in {{remaining}} seconds.
+			</ng-container>
+			<ng-container *ngIf="remaining <= 0">
+				Download started.
+			</ng-container>
+			<br />
+			Click <a href="{{link}}">here</a> if the download does not start automatically.
+		</p>
+	</md-card-content>
+</md-card>
 
-<div *ngIf="!downloading">
-  <md-select placeholder="Select version">
-    <md-option *ngFor="let version of allVersions" [value]="version">
-      {{version}}
-    </md-option>
-  </md-select>
-  <button md-button (click)="downloading = true">Download</button>
-</div>
+
+<md-card class="instructions-card">
+	<h2>Instructions</h2>
+	<md-card-content>
+		<ol>
+			<li>
+				Download the .zip file and extract it in a folder of your choice
+			</li>
+			<li>
+				If you are updating from an older version just extract the .zip file in your existing MatchmakingMonitor folder
+			</li>
+			<li>
+				Start the .exe
+			</li>
+		</ol>
+	</md-card-content>
+</md-card>
+
+
