--- a/Server/Frontend/src/app/home/home.component.html
+++ b/Server/Frontend/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-Home Component
+<md-card>
+	<h1>Welcome</h1>
+	<md-card-content>
+		<p>
+			For now this is just a small website to allow downloading of the latest version
+			<br />
+			and providing an api for the windows application to be informed when there is a new version released.
+			<br /><br />
+			I will add a changelog so you can see what new features there are or what bugs have been fixed 
+			<br/>
+			and also a form to allow feature requests and bug reports.
+		</p>
+		<button md-raised-button routerLink="/download" color="accent">Download</button>
+	</md-card-content>
+</md-card>
