--- a/Server/Frontend/src/styles.scss
+++ b/Server/Frontend/src/styles.scss
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-}
-
-
 @import '../node_modules/@angular/material/_theming.scss';
 
 @include mat-core();
@@ -13,3 +8,76 @@ $accent: mat-palette($mat-orange);
 $theme: mat-light-theme($primary, $accent);
 
 @include angular-material-theme($theme);
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	color: #333 !important;
+	background: #fafafa !important;
+}
+
+h1, h2, h3, p {
+	margin-top: 0;
+	margin-bottom: 2rem;
+}
+
+h1 {
+	font-weight: 400;
+}
+
+p {
+	font-size: 1.2rem;
+	line-height: 1.5rem;
+}
+
+a {
+	&.unstyled {
+		text-decoration: none;
+		color: #FFF;
+	}
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+
+	li {
+		margin: 0;
+		padding: 0;
+	}
+}
+
+.mat-toolbar-row {
+	.app-toolbar-filler {
+		flex: 1 1 auto;
+	}
+}
+
+.app-inner {
+	max-width: 1200px;
+	width: 100%;
+	height: 100vh;
+	margin: auto;
+	padding-top: 20px;
+	//padding: 20px;
+	//background: #FFF
+}
+
+.download-card {
+	margin-bottom: 20px;
+
+	p {
+		text-align: center;
+	}
+}
+
+.instructions-card {
+	li {
+		font-size: 1.2rem;
+		margin-bottom: 0.8rem;
+	}
+}
