--- a/Server/Frontend/src/app/download/download.component.html
+++ b/Server/Frontend/src/app/download/download.component.html
@@ -1,43 +1,62 @@
-<md-card class="download-card">
-	<h1>Download</h1>
-	<md-card-content>
-		<md-select placeholder="Select version" [(ngModel)]="selectedVersion" (change)="selectVersion($event.value)">
-			<md-option *ngFor="let version of allVersions" [value]="version">
-				{{version}}
-			</md-option>
-		</md-select>
-		<button md-raised-button color="accent" (click)="startDownloading()">Download</button>
-	</md-card-content>
-	<md-card-content *ngIf="downloading">
-		<p>
-			<ng-container *ngIf="remaining > 0">
-				Download starting in {{remaining}} seconds.
-			</ng-container>
-			<ng-container *ngIf="remaining <= 0">
-				Download started.
-			</ng-container>
-			<br />
-			Click <a href="{{link}}">here</a> if the download does not start automatically.
-		</p>
-	</md-card-content>
-</md-card>
+<div class="half-wrapper">
+	<div>
+		<md-card class="download-card">
+			<h1>Download</h1>
+			<md-card-content>
+				<md-select placeholder="Select version" [(ngModel)]="selectedVersion" (change)="selectVersion($event.value)">
+					<md-option *ngFor="let version of allVersions" [value]="version">
+						{{version}}
+					</md-option>
+				</md-select>
+				<button md-raised-button color="accent" (click)="startDownloading()">Download</button>
+			</md-card-content>
+			<md-card-content *ngIf="downloading">
+				<p>
+					<ng-container *ngIf="remaining > 0">
+						Download starting in {{remaining}} seconds.
+					</ng-container>
+					<ng-container *ngIf="remaining <= 0">
+						Download started.
+					</ng-container>
+					<br />
+					Click <a href="{{link}}">here</a> if the download does not start automatically.
+				</p>
+			</md-card-content>
+		</md-card>
 
 
-<md-card class="instructions-card">
-	<h2>Instructions</h2>
-	<md-card-content>
-		<ol>
-			<li>
-				Download the .zip file and extract it in a folder of your choice
-			</li>
-			<li>
-				If you are updating from an older version just extract the .zip file in your existing MatchmakingMonitor folder
-			</li>
-			<li>
-				Start the .exe
-			</li>
-		</ol>
-	</md-card-content>
-</md-card>
+		<md-card class="instructions-card">
+			<h2>Instructions</h2>
+			<md-card-content>
+				<ol>
+					<li>
+						Download the .zip file and extract it in a folder of your choice
+					</li>
+					<li>
+						If you are updating from an older version just extract the .zip file in your existing MatchmakingMonitor folder
+					</li>
+					<li>
+						Start the .exe
+					</li>
+				</ol>
+			</md-card-content>
+		</md-card>
+	</div>
+	<div>
+		<md-card>
+			<h2>Changelogs</h2>
+			<md-card-content>
+				<div class="changelog-wrapper">
+					<md-list *ngIf="changelogs">
+						<a md-list-item (click)="openChangelog(c)" *ngFor="let c of changelogs"> {{c}} </a>
+					</md-list>
+					<p *ngIf="changelogs && changelogs.length == 0">
+						No changelogs found
+					</p>
+				</div>
+			</md-card-content>
+		</md-card>
+	</div>
+</div>
 
 
