--- a/Server/Frontend/src/styles.scss
+++ b/Server/Frontend/src/styles.scss
@@ -29,12 +29,23 @@ h1 {
 	font-weight: 400;
 }
 
+h2 {
+	font-weight: 300;
+}
+
 p {
 	font-size: 1.2rem;
 	line-height: 1.5rem;
+
+	&.centered {
+		text-align: center;
+	}
 }
 
 a {
+	cursor: pointer;
+	color: #3f51b5;
+
 	&.unstyled {
 		text-decoration: none;
 		color: #FFF;
@@ -51,6 +62,11 @@ ul {
 	}
 }
 
+.spacer-hor {
+	height: 20px;
+	clear: both;
+}
+
 .mat-toolbar-row {
 	.app-toolbar-filler {
 		flex: 1 1 auto;
@@ -60,11 +76,27 @@ ul {
 .app-inner {
 	max-width: 1200px;
 	width: 100%;
-	height: 100vh;
 	margin: auto;
 	padding-top: 20px;
 	//padding: 20px;
 	//background: #FFF
+}
+
+.half-wrapper {
+	flex-direction: row;
+	display: flex;
+
+	> div {
+		flex: 1;
+
+		&:first-child {
+			margin-right: 10px;
+		}
+
+		&:last-child {
+			margin-left: 10px;
+		}
+	}
 }
 
 .download-card {
@@ -79,5 +111,19 @@ ul {
 	li {
 		font-size: 1.2rem;
 		margin-bottom: 0.8rem;
+	}
+}
+
+form {
+	.row {
+		margin-bottom: 10px;
+	}
+
+	.full-width {
+		width: 100%;
+	}
+
+	.form-error {
+		color: #f44336;
 	}
 }
