Added GoogleAnalytics to website

--- a/Server/Frontend/src/app/download/download.component.html
+++ b/Server/Frontend/src/app/download/download.component.html
@@ -19,7 +19,7 @@
 						Download started.
 					</ng-container>
 					<br/>
-					Click <a href="{{link}}">here</a> if the download does not start automatically.
+					Click <a (click)="clickHere($event)">here</a> if the download does not start automatically.
 				</p>
 			</md-card-content>
 		</md-card>
