Fixed discord instant invite

--- a/Server/Frontend/src/app/home/home.component.html
+++ b/Server/Frontend/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 		<p>
 			This is just a small website to provide the downloads and some information about the app.
 			<br/><br/>
-			You can contact me in the <a href="http://forum.worldofwarships.eu/index.php?/user/cpt-stewie-503276471/" target="_blank">EU</a>/<a href="http://forum.worldofwarships.com/index.php?/user/cpt-stewie-1026312329/" target="_blank">NA</a> forum (cpt_stewie) or on the wowreplays.com <a href="https://discord.gg/nDQNx" target="_blank">discord</a>
+			You can contact me in the <a href="http://forum.worldofwarships.eu/index.php?/user/cpt-stewie-503276471/" target="_blank">EU</a>/<a href="http://forum.worldofwarships.com/index.php?/user/cpt-stewie-1026312329/" target="_blank">NA</a> forum (cpt_stewie) or on the wowreplays.com <a href="https://discord.gg/ckQA449" target="_blank">discord</a>
 		</p>
 		<button md-raised-button routerLink="/download" color="accent">Downloads / Changelogs</button>
 	</md-card-content>
