--- a/Client/SettingsWindow.xaml
+++ b/Client/SettingsWindow.xaml
@@ -66,13 +66,10 @@
 				          ItemsSource="{Binding FontSizes}"
 				          SelectedValue="{Binding FontSize}" />
 			</StackPanel>
-			<StackPanel Orientation="Vertical">
-				<StackPanel Orientation="Horizontal" Margin="20,0,0,5">
-					<CheckBox IsChecked="{Binding HideLowBattles}" Margin="0,0,5,0" Content="Hide players that have less than 10 battles in the current ship" />
-				</StackPanel>
-				<StackPanel Orientation="Horizontal" Margin="20,0,0,0">
-					<CheckBox IsChecked="{Binding AutomaticLimitsSync}" Margin="0,0,5,0" Content="Synchronize limits from warships.today on app start" />
-				</StackPanel>
+			<StackPanel Orientation="Vertical" Margin="20, 5, 0, 0">
+				<CheckBox IsChecked="{Binding AutomaticAppUpdate}" Margin="0,0,0,2" Content="Automatically download new version" />
+				<CheckBox IsChecked="{Binding HideLowBattles}" Margin="0,0,0,2" Content="Hide players that have less than 10 battles in the current ship" />
+				<CheckBox IsChecked="{Binding AutomaticLimitsSync}" Margin="0,0,0,2" Content="Synchronize limits from warships.today on app start" />
 			</StackPanel>
 
 		</StackPanel>
